--- a/index.html
+++ b/index.html
@@ -1,12 +1,28 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>Page Title</title>
-</head>
-<body>
 
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
+<head>
+    <title>Capgemini</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+</head>
+
+<body>
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+        <div class="container-fluid">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Sobre mi</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Estancia en Capgemini</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+    <h1>Los pasos a seguir son: </h1>
+    <p>Tiriririri</p>
 
 </body>
+
 </html>
