--- a/index.html
+++ b/index.html
@@ -17,9 +17,13 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#">Estancia en Capgemini</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="https://www.w3schools.com/" target="_blank">Ayuda</a>
+                </li>
             </ul>
         </div>
     </nav>
+
     <h1>Los pasos a seguir son: </h1>
     <p>Tiriririri</p>
 
