--- a/sobreMi.html
+++ b/sobreMi.html
@@ -2,15 +2,15 @@
 <html>
 
 <head>
-    <title>Inicio</title>
+    <title>Sobre mi</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-sm bg-dark navbar-dark ">
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
         <div class="container-fluid">
-            <ul class="navbar-nav ms-auto me-auto">
+            <ul class="navbar-nav  ms-auto me-auto">
                 <li class="nav-item">
                     <a class="nav-link" href="./index.html">Inicio</a>
                 </li>
@@ -24,8 +24,7 @@
         </div>
     </nav>
     <div class="container mt-5">
-        <h1>Los pasos a seguir son: </h1>
-        <p>Tiriririri</p>
+
     </div>
 </body>
 </html>
