Prototipo sobre mi

--- a/sobreMi.html
+++ b/sobreMi.html
@@ -52,14 +52,38 @@
             </ul>
         </div>
         <div class="mt-5">
+            <h2>¡Prueba a expresar tus sensaciones!</h2>
+        </div>
+        <div class="mt-5">
             <img class="img-fluid" src="./resources/inside_out_feelings.jpg" />
         </div>
-        <div class="row">
-            <div class="col-2 me-1">1</div>
-            <div class="col-2 ms-4 ps-4 me-1">2</div>
-            <div class="col-2 ms-4 ps-4 me-1">3</div>
-            <div class="col-2">4</div>
-            <div class="col-2">5</div>
+        <div class="row mt-3" style="margin-left: 0px; margin-right: 0px; margin-bottom: 200px;">
+            <div class="rounded" style="flex: 1; background-color: greenyellow;">
+                <ul>
+                    <li>Hay muchos conceptos nuevos y no me aclaro</li>
+                </ul>
+            </div>
+            <div class="rounded ms-2 me-2" style="flex: 1; background-color: #d952ff;">
+                <ul>
+                    <li>¿Y si no se me da bien?</li>
+                </ul>
+            </div>
+            <div class="rounded" style="flex: 1; background-color: #ffe852;">
+                <ul>
+                    <li>Me encanta jugar creando</li>
+                    <li>Hay infinidad de posibilidades</li>
+                </ul>
+            </div>
+            <div class="rounded ms-2 me-2" style="flex: 1; background-color: #29adff;">
+                <ul>
+                    <li></li>
+                </ul>
+            </div>
+            <div class="rounded" style="flex: 1; background-color: #ff3e29;">
+                <ul>
+                    <li></li>
+                </ul>
+            </div>
         </div>
     </div>
 </body>
