--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
         <div class="container-fluid">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Sobre mi</a>
+                    <a class="nav-link" href="./sobreMi.html">Sobre mi</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Estancia en Capgemini</a>
+                    <a class="nav-link" href="./estanciaEnCapgemini.html">Estancia en Capgemini</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="https://www.w3schools.com/" target="_blank">Ayuda</a>
@@ -24,8 +24,22 @@
         </div>
     </nav>
 
-    <h1>Los pasos a seguir son: </h1>
-    <p>Tiriririri</p>
+
+    <h1>¡Bienvenidos!</h1>
+    <p>¿Alguna vez te has preguntado cómo se hacen las páginas web? Bueno, hoy vamos a aprender un poco sobre eso. Imagina que una página web es como una casa: tiene una estructura y se ve diferente en cada una.</p>
+    <p> En el mundo de las páginas web, HTML es como los cimientos de la casa, mientras que CSS es como la pintura y la decoración que hacen que la casa se vea bonita y diferente de las demás.</p>
+    <p>HTML significa "HyperText Markup Language" y es un lenguaje que usamos para estructurar el contenido de una página web. Es como darle instrucciones al navegador sobre qué información mostrar y cómo organizarla.</p>
+    <p>CSS significa "Cascading Style Sheets" y es lo que usamos para darle estilo a nuestra página web. Puedes cambiar los colores, el tamaño del texto, la posición de los elementos y muchas otras cosas para hacer que tu página se vea exactamente como quieras.</p>
+    <p>¡Así que hoy vamos a empezar a aprender sobre HTML y CSS! ¡Espero que te diviertas tanto como yo!</p>
+    
+
+    <li class="nav-item">
+        <a class="nav-link" href="./MyWebPage.html">Crea tu página web</a>
+    </li>
+
+
+
+
 
 </body>
 
