--- a/index.html
+++ b/index.html
@@ -2,30 +2,277 @@
 <html>
 
 <head>
-    <title>Inicio</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <title>Inicio</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
+  <style>
+    .color-box {
+      width: 150px;
+      height: 100px;
+      margin: 10px;
+      display: inline-block;
+      position: relative;
+      /* Para que el texto se posicione correctamente */
+      text-align: center;
+      /* Para centrar el texto */
+      transition: transform 0.5s ease;
+      /* Transición suave de la propiedad transform */
+      border-radius: 20px;
+    }
+
+    .color-name {
+      position: absolute;
+      top: 35%;
+      right: 5%;
+      /* Para centrar vertical y horizontalmente */
+      color: whitesmoke;
+      font-weight: bold;
+      font-size: large;
+      /* Color del texto */
+    }
+
+    .color-name:hover {
+      color: black;
+    }
+
+    .color-box:hover {
+      cursor: pointer;
+      transform: scale(1.1);
+      box-shadow: 2px 2px 8px black;
+      /* Escala ligeramente más grande al hacer hover */
+    }
+
+    .borderdiv {
+      background-color: rgb(234, 234, 234);
+      border-radius: 25px;
+      border: 2px solid #73AD21;
+      padding: 10px;
+      margin-bottom: 30px;
+    }
+
+    .borderdiv:hover {
+      border: 2px solid #111b66;
+      border-style: dotted;
+      transform: scale(1.01);
+    }
+
+    .headings {
+      background-color: #2e2f2c;
+      width: fit-content;
+      padding: 10px 5%;
+      margin: 20px auto 20px;
+      color: white;
+      border-radius: 10px;
+      box-shadow: 2px 2px 8px black;
+      transition: padding 1s;
+    }
+
+    .headings:hover {
+      transform: scale(1.05);
+      padding: 12px 10%;
+    }
+  </style>
+
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-sm bg-dark navbar-dark ">
-        <div class="container-fluid">
-            <ul class="navbar-nav ms-auto me-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="./index.html">Inicio</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./sobreMi.html">Sobre mi</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./estanciaEnCapgemini.html">Estancia en Capgemini</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
-    <div class="container mt-5">
-        <h1>Los pasos a seguir son: </h1>
-        <p>Tiriririri</p>
+  <nav class="navbar navbar-expand-sm bg-dark navbar-dark ">
+    <div class="container-fluid">
+      <ul class="navbar-nav ms-auto me-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="./index.html">Inicio</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="./sobreMi.html">Sobre mi</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="./estanciaEnCapgemini.html">Estancia en Capgemini</a>
+        </li>
+      </ul>
     </div>
+  </nav>
+
+  <div style="padding: 40px;">
+
+    <h1 style="text-align: center; padding-bottom: 30px;">Explorando HTML y CSS de manera divertida</h1>
+
+    <div class="borderdiv">
+      <h2>¿Qué es HTML?</h2>
+      <ul>
+        <li>HTML significa Lenguaje de Marcado de Hipertexto, Hyper Text Markup Language.</li>
+        <li>HTML es el lenguaje de marcado estándar para crear páginas web.</li>
+        <li>HTML describe la estructura de una página web.</li>
+        <li>HTML consiste en una serie de elementos.</li>
+        <li>Los elementos HTML le indican al navegador cómo mostrar el contenido.</li>
+        <li>Los elementos HTML etiquetan piezas de contenido como "esto es un encabezado", "esto es un párrafo", "esto
+          es un enlace", etc.</li>
+      </ul>
+    </div>
+    <div class="borderdiv">
+      <h2>¿Qué es CSS?</h2>
+      <p>Las Hojas de Estilo en Cascada (CSS, Cascading Style Sheets) se utilizan para dar formato al diseño de una
+        página web.</p>
+      <p>Con CSS, puedes controlar el color, la fuente, el tamaño del texto, el espaciado entre elementos, cómo se
+        posicionan y se distribuyen los elementos, qué imágenes de fondo o colores de fondo se deben usar, diferentes
+        visualizaciones para diferentes dispositivos y tamaños de pantalla, ¡y mucho más!</p>
+    </div>
+
+    <!-- Aquí empieza el div centrado -->
+    <div style="text-align: center;">
+      <h1>Ejemplos de algunos elementos HTML:</h1>
+
+      <div style="padding:10px">
+        <h2 class="headings">Tipos de encabezados</h2>
+        <p>La etiqueta &lt;h1&gt; se utiliza para definir el encabezado principal de una página.</p>
+        <h1 title="&lt;h1&gt;&lt;/h1&gt;">Ejemplo de encabezado 1</h2>
+          <h2 title="&lt;h2&gt;&lt;/h2&gt;">Ejemplo de encabezado 2</h2>
+          <h3 title="&lt;h3&gt;&lt;/h3&gt;">Ejemplo de encabezado 3</h3>
+          <h4 title="&lt;h4&gt;&lt;/h4&gt;">Ejemplo de encabezado 4</h4>
+          <h5 title="&lt;h5&gt;&lt;/h5&gt;">Ejemplo de encabezado 5</h5>
+          <h6 title="&lt;h6&gt;&lt;/h6&gt;">Ejemplo de encabezado 6</h6>
+      </div>
+
+
+      <div style="padding:10px">
+        <h2 class="headings">Etiqueta &lt;p&gt;</h2>
+        <p>La etiqueta &lt;p&gt; se utiliza para definir un párrafo de texto.</p>
+        <p>Este es un ejemplo de párrafo. Puedes escribir todo lo que quieras aquí.</p>
+      </div>
+
+      <div style="padding:10px">
+        <h2 class="headings">Etiqueta &lt;img&gt;</h2>
+        <p>La etiqueta &lt;img&gt; se utiliza para mostrar imágenes en una página web.</p>
+        <img src="https://www.ccoo-servicios.es/imagenes/capgemini/images/Motivos/centro-Murcia.jpg">
+        <img src="https://www.ccoo-servicios.es/imagenes/capgemini/images/Motivos/centro-Murcia.jpg" style="width: 20%;">
+        <img src="https://www.ccoo-servicios.es/imagenes/capgemini/images/Motivos/centro-Murcia.jpg" width="128"
+          height="128" style="border-radius: 100%">
+      </div>
+
+      <div style="padding:10px">
+        <h2 class="headings">Etiqueta &lt;a&gt;</h2>
+        <p>La etiqueta &lt;a&gt; se utiliza para crear enlaces a otras páginas o recursos.</p>
+        <a href="https://www.capgemini.com/" target="_blank">Visitar Capgemini.com</a>
+      </div>
+
+      <div style="padding:10px">
+        <h2 class="headings">Etiqueta &lt;ul&gt; y &lt;li&gt;</h2>
+        <p>Las etiquetas &lt;ul&gt; y &lt;li&gt; se utilizan para crear listas sin orden específico.</p>
+        <ul style="display: inline-block;">
+          <li title="&lt;li&gt;Elemento 1&lt;/li&gt;">Elemento 1</li>
+          <li title="&lt;li&gt;Elemento 2&lt;/li&gt;">Elemento 2</li>
+          <li title="&lt;li&gt;Elemento 3&lt;/li&gt;">Elemento 3</li>
+        </ul>
+      </div>
+
+      <div class="borderdiv" style="text-align: start;">
+        <h2>El elemento &lt;div&gt;</h2>
+        <p>El elemento &lt;div&gt; se utiliza como un contenedor para otros elementos HTML.
+          Es por defecto, un elemento de bloque, lo que significa que ocupa todo el ancho disponible y viene con
+          saltos de línea antes y después.
+          Un elemento &lt;div&gt; ocupa todo el ancho disponible:</p>
+        Lorem Ipsum<div style="background-color: darkgray;">Soy un div</div> dolor sit amet.
+        </p>
+      </div>
+
+
+
+      <h2 class="headings">Colores en HTML y CSS</h2>
+
+      <div
+        style="background-image: url(https://images.pexels.com/photos/6395415/pexels-photo-6395415.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2); color: white;padding: 20px;border-radius: 90px;">
+        <p>En HTML, un color puede ser especificado usando un nombre de color:</p>
+        <div class="color-box" style="background-color: aqua; ">
+          <span class="color-name">Aqua</span>
+        </div>
+        <div class="color-box" style="background-color: blue;">
+          <span class="color-name">Blue</span>
+        </div>
+        <div class="color-box" style="background-color: fuchsia;">
+          <span class="color-name">Fuchsia</span>
+        </div>
+        <div class="color-box" style="background-color: gray;">
+          <span class="color-name">Gray</span>
+        </div>
+        <div class="color-box" style="background-color: green;">
+          <span class="color-name">Green</span>
+        </div>
+        <div class="color-box" style="background-color: lime;">
+          <span class="color-name">Lime</span>
+        </div>
+        <div class="color-box" style="background-color: maroon;">
+          <span class="color-name">Maroon</span>
+        </div>
+        <div class="color-box" style="background-color: navy;">
+          <span class="color-name">Navy</span>
+        </div>
+        <div class="color-box" style="background-color: olive;">
+          <span class="color-name">Olive</span>
+        </div>
+        <div class="color-box" style="background-color: purple;">
+          <span class="color-name">Purple</span>
+        </div>
+        <div class="color-box" style="background-color: red;">
+          <span class="color-name">Red</span>
+        </div>
+        <div class="color-box" style="background-color: silver;">
+          <span class="color-name">Silver</span>
+        </div>
+        <div class="color-box" style="background-color: teal;">
+          <span class="color-name">Teal</span>
+        </div>
+        <div class="color-box" style="background-color: yellow;">
+          <span class="color-name">Yellow</span>
+        </div>
+        <div class="color-box" style="background-color: deeppink;">
+          <span class="color-name">DeepPink</span>
+        </div>
+        <div class="color-box" style="background-color: greenyellow ;">
+          <span class="color-name">GreenYellow</span>
+        </div>
+        <div class="color-box" style="background-color: blueviolet ;">
+          <span class="color-name">BlueViolet</span>
+        </div>
+        <div class="color-box" style="background-color: turquoise ;">
+          <span class="color-name">Turquoise</span>
+        </div>
+        <p style="padding: 10px">HTML admite <span style="text-decoration: underline;">140 nombres</span> de colores
+          estándar.</p>
+      </div>
+
+      <div style="padding:20px">
+        <h2 class="headings">HTML media</h2>
+        <iframe style="padding: 10px;" width="560" height="315"
+          src="https://www.youtube.com/embed/XqFR2lqBYPs?si=zqyd0F2BEnTTKkEM" title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen></iframe>
+      </div>
+
+
+    </div>
+  </div>
+
+
+  <footer style="background-color: #333; color: #fff; padding: 20px; text-align: center; width: 100%;">
+    <h4>Contáctanos para cualquier duda:</h4>
+    <div style="display: flex; justify-content: space-around; margin-top: 20px;">
+      <div style="flex-basis: 30%; padding: 10px; background-color: #666; border-radius: 8px;">
+        <h5>Andrea Torres Lucas<img src="https://www.svgrepo.com/show/448240/microsoft-teams.svg" style="width:8%; margin-left: 4px;"></h5>
+        <p>andrea.torres-lucas.external@capgemini.com <img src="https://upload.wikimedia.org/wikipedia/commons/d/df/Microsoft_Office_Outlook_%282018%E2%80%93present%29.svg" style="width:6%;margin-left: 1px;"></p>
+      </div>
+      <div style="flex-basis: 30%; padding: 10px; background-color: #666; border-radius: 8px;">
+        <h5>Daniel Abellan Sanchez <img src="https://www.svgrepo.com/show/448240/microsoft-teams.svg" style="width:8%; margin-left: 4px;"></h5>
+        <p>daniel.abellan-sanchez@capgemini.com <img src="https://upload.wikimedia.org/wikipedia/commons/d/df/Microsoft_Office_Outlook_%282018%E2%80%93present%29.svg" style="width:6%; margin-left: 1px;"></p>
+      </div>
+      <div style="flex-basis: 30%; padding: 10px; background-color: #666; border-radius: 8px;">
+        <h5>Virginia Torres Lucas <img src="https://www.svgrepo.com/show/448240/microsoft-teams.svg" style="width:8%; margin-left: 4px;"></h5>
+        <p>virginia.torres-lucas@capgemini.com <img src="https://upload.wikimedia.org/wikipedia/commons/d/df/Microsoft_Office_Outlook_%282018%E2%80%93present%29.svg" style="width:6%; margin-left: 1px;"></p>
+      </div>
+    </div>
+    <a href="https://www.w3schools.com/html/html_intro.asp"
+      style="display: block; text-align: center; margin-top: 15px; color: #fff;">W3schools.com</a>
+  </footer>
 </body>
-</html>
+
+</htm
